--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bayudev/react-native-floating-button",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/bayuhendrianto/react-native-floating-button",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bayuhendrianto/react-native-floating-button"
+    "url": "git+https://github.com/bayuhendrianto/react-native-floating-button.git"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -46,8 +46,8 @@
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
-    "react": ">=16.8.6",
-    "react-native": ">=0.60.5",
+    "react": ">=18.0.0",
+    "react-native": ">=0.70.0",
     "react-native-gesture-handler": ">=2.x.x",
     "react-native-reanimated": ">=3.x.x"
   }
